tests/auto/qmlls/utils/data/highlights/invalid/highlightsShift_del1.qml
imQuick
Item {
    width: 100
    Rectangle {
        width: 100
        height: 100
    }
}
